logs/yunpian-sdk-python.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yunpian'...
Compiling './lib/python3.5/site-packages/yunpian/Sign.py'...
***   File "./lib/python3.5/site-packages/yunpian/Sign.py", line 32
    print Sign.getSign({'mobile': '13000000000', 'text': '【yunpian】您的验证码是4444'}, '12345678')
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yunpian/Tea.py'...
***   File "./lib/python3.5/site-packages/yunpian/Tea.py", line 114
    print base64.encodestring(des.encrypt('12345678'))
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yunpian/model'...
Listing './lib/python3.5/site-packages/yunpian/test'...
Compiling './lib/python3.5/site-packages/yunpian/test/YunpianRestTest.py'...
***   File "./lib/python3.5/site-packages/yunpian/test/YunpianRestTest.py", line 27
    print json.dumps(result.content, ensure_ascii=False)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yunpian_sdk_python-0.0.8.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
